[project]
name = "tensordict-cache"
dynamic = ["version"]
description = "Online cache for prompt embeddings using TensorDict memory-mapped storage"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "yxgao" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensordict>=0.11.0",
]

[project.urls]
Repository = "https://github.com/yxgao/tensordict-cache"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tensordict_cache/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tensordict_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["tensordict_cache"]
